<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" 
    android:background="@color/activity_background_color">

    <LinearLayout
        android:id="@+id/contactUsParent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/activity_background_color"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin" >

        <LinearLayout
            android:id="@+id/contactUsSocialParent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/leaveMsgTitle"
                style="@style/contactUsHelpText"
                android:text="@string/leave_us_a_message"
                custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />
        </LinearLayout>

        <View
            android:id="@+id/socialDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:background="#cccccc" />

        <TextView
            android:id="@+id/contactUsTitle"
            style="@style/contactUsHelpText"
            android:text="@string/contact_us_text"
            custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />

        <com.philips.cl.di.digitalcare.customview.DigitalCareFontButton
            android:id="@+id/contactUsChat"
            style="@style/fontButton"
            android:text="@string/live_chat"
            custom:digitalcareFontAssetName="fonts/CentraleSans-Bold.otf" />

        <com.philips.cl.di.digitalcare.customview.DigitalCareFontButton
            android:id="@+id/contactUsEmail"
            style="@style/fontButton"
            android:text="@string/send_email"
            custom:digitalcareFontAssetName="fonts/CentraleSans-Bold.otf" />

        <com.philips.cl.di.digitalcare.customview.DigitalCareFontButton
            android:id="@+id/contactUsCall"
            style="@style/fontButton"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_call_button_bg"
            android:text="@string/call_number"
            custom:digitalcareFontAssetName="fonts/CentraleSans-Bold.otf" />

        <TextView
            android:id="@+id/contactUsOpeningHours"
            style="@style/contactUsHelpText"
            android:layout_marginBottom="0dp"
            android:text="@string/opening_hours"
            android:visibility="gone"
            custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />

        <TextView
            android:id="@+id/firstRowText"
            style="@style/contactUsBottomText"
            android:text="@string/opening_hours_first_row"
            android:visibility="gone"
            custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />
    </LinearLayout>

</ScrollView>