...
                android:text="@string/rate_philips_description"
                android:textColor="@color/text_sub_header_color"
                android:textSize="@dimen/title_text_size_medium"
                custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />

            <com.philips.cl.di.digitalcare.customview.DigitalCareFontButton
                android:id="@+id/tellus_PlayStoreReviewButton"
                style="@style/fontButton"
                android:text="@string/rate_playstore_buttontext"
                custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />
        </LinearLayout>

        <View
...
                android:text="@string/rate_philips_description"
                android:textColor="@color/text_sub_header_color"
                android:textSize="@dimen/title_text_size_medium"
                custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />

            <com.philips.cl.di.digitalcare.customview.DigitalCareFontButton
                android:id="@+id/tellus_PhilipsReviewButton"
                style="@style/fontButton"
                android:text="@string/rate_philips_buttontext"
                custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />
        </LinearLayout>
    </LinearLayout>

...
