...
            android:id="@+id/chatDesc"
            style="@style/chatNowDesc"
            android:text="@string/chat_desc"
            custom:digitalcareFontAssetName="fonts/CentraleSans-Book.otf" />

        <LinearLayout
            android:id="@+id/chatNowParentPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2" >

            <com.philips.cl.di.digitalcare.customview.DigitalCareFontButton
                android:id="@+id/chatNow"
                style="@style/fontButton"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_weight="1"
                android:text="@string/chat_now"
                custom:digitalcareFontAssetName="fonts/CentraleSans-Bold.otf" />
...
